--- a/Q.Lib/Q.Lib.csproj
+++ b/Q.Lib/Q.Lib.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>NET45;NET46;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>NET45;NET46;NET47;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
