--- a/Q.Lib/Q.Lib.csproj
+++ b/Q.Lib/Q.Lib.csproj
@@ -6,8 +6,8 @@
     <Authors>XuQing</Authors>
     <Company>XuQing</Company>
     <PackageReleaseNotes>一款常用工具合集，简单的socket服务客户端，日志记录，数据转换等</PackageReleaseNotes>
-    <Version>1.0.4.6</Version>
-    <Description>添加消息快速返回方法</Description>
+    <Version>1.0.4.7</Version>
+    <Description>修改bug</Description>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
