--- a/.drone.yml
+++ b/.drone.yml
@@ -1,8 +1,8 @@
 pipeline:
     compile:
-        image: microsoft/aspnetcore-build
+        image: mcr.microsoft.com/dotnet/core/sdk:2.2-alpine3.9
         commands:
-            - dotnet build Q.Lib\.
-            - dotnet pack  Q.Lib\ -c Release -o nuget
-            - dotnet nuget push -s http://nuget.yesicoo.com/v3/index.json -k dp1rtfq_fyzs9wl Q.Lib\Nuget\*.nupkg
-   
+            - dotnet build Q.Lib -c Release -f netstandard2.0
+            - dotnet pack  Q.Lib -c Release -o nuget -p:TargetFrameworks=netstandard2.0
+            - dotnet nuget push -s http://nuget.yesicoo.com/v3/index.json -k dp1rtfq_fyzs9wl Q.Lib/nuget/Q.Lib.1.0.4.11.nupkg
+ 
