--- a/.drone.yml
+++ b/.drone.yml
@@ -2,6 +2,6 @@ pipeline:
     compile:
         image: microsoft/aspnetcore-build
         commands:
-            - dotnet pack  Q.Lib\ -c Release -o nuget
+            - dotnet pack  Q.Lib -c Release -o nuget
             - dotnet nuget push -s http://nuget.yesicoo.com/v3/index.json -k dp1rtfq_fyzs9wl Q.Lib\Nuget\*.nupkg
  
