--- a/.drone.yml
+++ b/.drone.yml
@@ -1,6 +1,6 @@
 pipeline:
     compile:
-        image: pull mcr.microsoft.com/dotnet/core/sdk:2.2-alpine3.9
+        image: mcr.microsoft.com/dotnet/core/sdk:2.2-alpine3.9
         commands:
             - dotnet pack  Q.Lib -c Release -o nuget
             - dotnet nuget push -s http://nuget.yesicoo.com/v3/index.json -k dp1rtfq_fyzs9wl Q.Lib\Nuget\*.nupkg
