--- a/.drone.yml
+++ b/.drone.yml
@@ -4,5 +4,5 @@ pipeline:
         commands:
             - dotnet build Q.Lib -c Release -f netstandard2.0
             - dotnet pack  Q.Lib -c Release -o nuget -p:TargetFrameworks=netstandard2.0
-            - dotnet nuget push -s http://nuget.yesicoo.com/v3/index.json -k dp1rtfq_fyzs9wl Q.Lib\Nuget\*.nupkg
+            - dotnet nuget push -s http://nuget.yesicoo.com/v3/index.json -k dp1rtfq_fyzs9wl Q.Lib\Nuget\Q.Lib.1.0.4.11.nupkg
  
