--- a/Q.Lib/Q.Lib.csproj
+++ b/Q.Lib/Q.Lib.csproj
@@ -1,17 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>NET45;NET46;NET472;netcoreapp2.2</TargetFrameworks>
+    <TargetFrameworks>NET45;NET46;NET472;netstandard2.0;netcoreapp2.2</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>XuQing</Authors>
     <Company>XuQing</Company>
     <PackageReleaseNotes>一款常用工具合集，简单的socket服务客户端，日志记录，数据转换等</PackageReleaseNotes>
-    <Version>1.0.4.15</Version>
+    <Version>1.0.4.16</Version>
     <Description>修改中文转拼音bug</Description>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-    <PackageReference Include="System.Text.Encoding.CodePages" Version="4.5.0" Condition="'$(TargetFramework)' == 'netcoreapp2.2'" />
   </ItemGroup>
 </Project>
