--- a/Q.Lib/Q.Lib.csproj
+++ b/Q.Lib/Q.Lib.csproj
@@ -8,8 +8,8 @@
     <Authors>XuQing</Authors>
     <Company>XuQing</Company>
     <PackageReleaseNotes>一款常用工具合集，简单的socket服务客户端，日志记录，数据转换等</PackageReleaseNotes>
-    <Version>1.0.5.21</Version>
-    <Description>去缓存类型除约束</Description>
+    <Version>1.0.5.22</Version>
+    <Description>缓存添加手动新增方法 和 获取后立即移除方法</Description>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
