--- a/Q.Lib/Q.Lib.csproj
+++ b/Q.Lib/Q.Lib.csproj
@@ -8,9 +8,8 @@
     <Authors>XuQing</Authors>
     <Company>XuQing</Company>
     <PackageReleaseNotes>一款常用工具合集，日志记录，数据转换等</PackageReleaseNotes>
-    <Version>1.0.7.2</Version>
-    <Description>升级.Net6 支持
-添加 DynamicArgTool 参数转换工具</Description>
+    <Version>1.0.8.1</Version>
+    <Description>添加优化TimeOut自动超时数据结构封装</Description>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
