--- a/Q.Lib/Q.Lib.csproj
+++ b/Q.Lib/Q.Lib.csproj
@@ -8,8 +8,8 @@
     <Authors>XuQing</Authors>
     <Company>XuQing</Company>
     <PackageReleaseNotes>一款常用工具合集，日志记录，数据转换等</PackageReleaseNotes>
-    <Version>1.0.8.5</Version>
-    <Description>TimeOutDic 新增延时与更新方法</Description>
+    <Version>1.0.8.6</Version>
+    <Description>Ack增强</Description>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
